Fix project cards overlapping text on mobile
- Set margin-top to 0 and use padding-top instead (40-50px)
- Added margin-bottom to dropdown text section (40-50px)
- Forces section height to auto on mobile
- Creates proper spacing between description and cards
- Responsive approach: spacing adapts to content
- No more overlap between text and project tiles

--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -517,13 +517,29 @@ ul {
 
 @media only screen and (max-width: 767px) {
   .project-box {
-    margin-top: 30px;
+    margin-top: 0;
+    padding-top: 40px;
+  }
+  
+  /* Ensure section doesn't have fixed height */
+  section {
+    height: auto !important;
+  }
+  
+  /* Add space after the description text */
+  .dropdown {
+    margin-bottom: 40px;
   }
 }
 
 @media only screen and (max-width: 450px) {
   .project-box {
-    margin-top: 30px;
+    margin-top: 0;
+    padding-top: 50px;
+  }
+  
+  .dropdown {
+    margin-bottom: 50px;
   }
 }
 
